# llm-conversation-keyword-extractor

./: README.md  keyword-extractor.ipynb  pyproject.toml  role_enum.py
data/: sample.json  sample_healthcare.json
